--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,20 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&family=Public+Sans:wght@300;400;500;600;700;900&display=swap');
+
+*{
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+body{
+  font-family: "Poppins", sans-serif, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+}
+
+html, body{
+  scroll-behavior: smooth;
+}
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-@layer base{
-  li{
-    @apply p-3 hover:text-indigo-600
-  }
-
-  button{
-    @apply text-white border bg-indigo-600 border-indigo-600
-    hover:bg-transparent hover:text-indigo-600 rounded-md
-  }
-}
